# REMU

./: .gitignore  LICENSE  README.md  REMU.sln
REMU/: Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  CPUTest.cpp  CPUTest.h  Clint.cpp  Clint.h  Device.h  Machine.cpp  Machine.h  MachineTest.cpp  MachineTest.h  OpcodeHelpers.cpp  OpcodeHelpers.h  Opcodes.cpp  OpcodesTest.cpp  Plic.cpp  Plic.h  RAM.cpp  RAM.h  REMU.vcxproj  REMU.vcxproj.filters  Trap.cpp  Trap.h  Uart.cpp  Uart.h  Virtio.cpp  Virtio.h  c.out  main.cpp
REMU/tests/riscv32/: rv32mi-p-breakpoint  rv32mi-p-csr  rv32mi-p-illegal  rv32mi-p-lh-misaligned  rv32mi-p-lw-misaligned  rv32mi-p-ma_addr  rv32mi-p-ma_fetch  rv32mi-p-mcsr  rv32mi-p-sbreak  rv32mi-p-scall  rv32mi-p-sh-misaligned  rv32mi-p-shamt  rv32mi-p-sw-misaligned  rv32mi-p-zicntr  rv32si-p-csr  rv32si-p-dirty  rv32si-p-ma_fetch  rv32si-p-sbreak  rv32si-p-scall  rv32si-p-wfi  rv32ua-p-amoadd_w  rv32ua-p-amoand_w  rv32ua-p-amomax_w  rv32ua-p-amomaxu_w  rv32ua-p-amomin_w  rv32ua-p-amominu_w  rv32ua-p-amoor_w  rv32ua-p-amoswap_w  rv32ua-p-amoxor_w  rv32ua-p-lrsc  rv32ua-v-amoadd_w  rv32ua-v-amoand_w  rv32ua-v-amomax_w  rv32ua-v-amomaxu_w  rv32ua-v-amomin_w  rv32ua-v-amominu_w  rv32ua-v-amoor_w  rv32ua-v-amoswap_w  rv32ua-v-amoxor_w  rv32ua-v-lrsc  (+226 more)
REMU/tests/riscv64/: rv64mi-p-access  rv64mi-p-breakpoint  rv64mi-p-csr  rv64mi-p-illegal  rv64mi-p-ld-misaligned  rv64mi-p-lh-misaligned  rv64mi-p-lw-misaligned  rv64mi-p-ma_addr  rv64mi-p-ma_fetch  rv64mi-p-mcsr  rv64mi-p-sbreak  rv64mi-p-scall  rv64mi-p-sd-misaligned  rv64mi-p-zicntr  (+335 more)
REMU/x64/: main.elf
(+14 files in other folders)
